fixed chat bubble sticking problem, more truncation

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -2819,7 +2819,6 @@ hr.my-4 {
 .chat_profile-applicant {
   margin-left: 5%;
   margin-bottom: 5%;
-  font-size: 0.5em;
 }
 
 .request-details {
